--- a/WebApp/Views/Consultation/PartialViewDetail.cshtml
+++ b/WebApp/Views/Consultation/PartialViewDetail.cshtml
@@ -117,11 +117,11 @@
             </div>
         </div>
         <div style="margin-left: 334px; margin-top: -2px;" class="chat-sec">
-            <h2>Chat Text</h2>
+            <h2>Consultation Chat</h2>
 
             <div style="font-size: 10px; overflow: auto; height: 77px;">
                 <table>
-                    @if (ViewBag.ChatText != null)
+                    @if (ViewBag.ChatText.Count>0)
                     {
                         foreach (var item in ViewBag.ChatText)
                         {
@@ -132,6 +132,13 @@
                             </tr>
 
                         }
+                    }
+                   @if (ViewBag.ChatText.Count == 0)
+                   {
+                        <tr>
+                            <td>N.A</td>
+
+                        </tr>
                     }
                 </table>
 
@@ -170,19 +177,23 @@
             <div id="p_files" style="color: #375781;font-family:Helvetica Neue,Roboto,Arial,Droid Sans,sans-serif; font-size: 14px;font-weight: 400;line-height: 1.471; width:290px; height:40px;overflow:auto;">
                 <table>
                     <tr>
-                        @if (Model.AppFiles != null || Model.AppFiles.Count > 0)
-                {
-
-                    foreach (var item in Model.AppFiles)
-                    {
+                        @if (Model.AppFiles.Count > 0)
+                                    {
+                                        var j = 1;
+                                        foreach (var item in Model.AppFiles)
+                                        {
                                 <td>
                                     <button id="@item.fileID" type="button" class="btn btn-default" style="display:block; font-size:10px;position:relative" onclick="downloadFile(@item.fileID,@Model.PatientVM.patientid)">
-                                        @item.FileName.Trim()
+                                       File+@j;
                                     </button>
                                 </td>
-
+                                j = j + 1;
                             }
 
+                        }
+                        @if (Model.AppFiles.Count == 0)
+                        {
+                            <td>N.A</td>
                         }
                     </tr>
                 </table>
@@ -214,7 +225,7 @@
                         <td style="padding: 7px">
                             <p style="color: rgb(55, 87, 129); font-family:Helvetica Neue,Roboto,Arial,Droid Sans,sans-serif; font-size: 14px;font-weight: 400;line-height: 1.471;">
                                 <b>Review of Systems:</b><br>
-                                @if (Model.rosItems != null || Model.rosItems.Count > 0)
+                                @if (Model.rosItems.Count > 0)
                                 {
 
                                     foreach (var item in Model.rosItems)
@@ -234,6 +245,10 @@
                                     }
 
                                 }
+                                    @if (Model.rosItems.Count == 0)
+                                    {
+                                        <label>N.A</label>
+                                    }
                             </p>
                         </td>
                     </tr>
