--- a/WebApp/Views/DoctorAppointment/Index.cshtml
+++ b/WebApp/Views/DoctorAppointment/Index.cshtml
@@ -69,8 +69,7 @@
 
 
                     <div class="x_content">
-                        <div id="divUpcoming" class="table table-striped table-bordered dataTable no-footer">
-
+                        <div id="divUpcoming" class="table table-striped dataTable no-footer">
                             @{
                                 Html.RenderAction("PartialDoctorUpcoming", "DoctorAppointment");
                             }
@@ -84,8 +83,7 @@
 
 
                     <div class="x_content">
-                        <div id="divReschedule" class="table table-striped table-bordered dataTable no-footer">
-
+                        <div id="divReschedule" class="table table-striped dataTable no-footer">
                             @{
                                 Html.RenderAction("PartialDoctorReschedule", "DoctorAppointment");
                             }
@@ -100,7 +98,7 @@
 
 
                     <div class="x_content">
-                        <div id="divPending" class="table table-striped table-bordered dataTable no-footer">
+                        <div id="divPending" class="table table-striped dataTable no-footer">
 
                             @{
                                 Html.RenderAction("PartialDoctorPending", "DoctorAppointment");
@@ -162,6 +160,9 @@
 <!-- /page content -->
 <!-- Load View App Detail Popup -->
 <script>
+
+    
+
     function downloadFile(fileId) {
 
         if (confirm("Are you sure you want to downlod file?")) {
