--- a/WebApp/Views/DoctorAppointment/PartialDoctorPending.cshtml
+++ b/WebApp/Views/DoctorAppointment/PartialDoctorPending.cshtml
@@ -39,7 +39,11 @@ else
                         consultId = Convert.ToInt32(item.consultID);
                     }
                     <tr class="even pointer">
-                        <td style="text-align:center;width:20%">@item.PatientName</td>
+                        <td style="text-align:center;width:20%;">
+                            <a href='' onclick='showProfile(@item.patientID)' id="viewprofile" data-toggle="modal" data-target='#myModal8'>
+
+                                @item.PatientName</a>
+                        </td>
                         <td style="text-align:center;width:15%">
                             <span class="replacer" id="@("replacep" + j)"></span>
                             <script type="text/javascript">
