--- a/WebApp/Views/DoctorConsultation/PartialViewDoctorConsultation.cshtml
+++ b/WebApp/Views/DoctorConsultation/PartialViewDoctorConsultation.cshtml
@@ -26,7 +26,10 @@ else
                 foreach (var item in Model)
                 {
                     <tr class="even pointer">
-                        <td style="text-align:center;width:20%">@item.PatientName</td>
+                        <td style="text-align:center;width:20%"><a href='' onclick='showProfile(@item.patientID)' id="viewprofile" data-toggle="modal" data-target='#myModal8'>
+
+    @item.PatientName
+</a>
                         <td style="text-align:center;width:15%">
                             <span class="replacer" id="@("replacedc" + j)"></span>
                             <script type="text/javascript">
