--- a/WebApp/Views/DoctorConsultation/PartialViewDoctorConsultationDetail.cshtml
+++ b/WebApp/Views/DoctorConsultation/PartialViewDoctorConsultationDetail.cshtml
@@ -126,11 +126,11 @@
             </div>
         </div>
         <div style="margin-left: 334px; margin-top: -114px;" class="chat-sec">
-            <h2>Chat Text</h2>
+            <h2>Consultation Chat</h2>
             
             <div style="font-size: 10px; overflow: auto; height: 77px;">
                 <table>
-                    @if (ViewBag.ChatText != null)
+                    @if (ViewBag.ChatText.Count > 0)
                     {
                         foreach (var item in ViewBag.ChatText)
                         {
@@ -142,20 +142,28 @@
 
                         }
                     }
+                   @if (ViewBag.ChatText.Count==0)
+                   
+                       {
+                        <tr>
+                            <td>N.A</td>
+
+                        </tr>
+                    }
                 </table>
                
             </div>
 
         </div>
         <div style="border-top: 1px Solid #c3bebe; margin: 15px -15px -30px; padding: 10px 21px 0; ">
-            <p style="color: #375781;"><span style="width: 150px; float: left;">Pharmacy</span><b>@pharmacy</b></p>
+            <p style="color: #375781;"><span style="width: 150px; float: left;"><b>Pharmacy</b></span>@pharmacy</p>
         </div>
         <div style="border-bottom: 1px Solid #c3bebe; border-top: 1px Solid #c3bebe; margin: 36px -15px 20px; padding: 10px 21px 0; ">
-            <p style="color: #375781;"><span style="width: 150px; float: left;">App. Date/Time</span><b><span id="replaceme"></span>
+            <p style="color: #375781;"><span style="width: 150px; float: left;"><b>App. Date/Time</b></span><span id="replaceme"></span>
             <script type="text/javascript">
                                 var fdate = showLocal('@utcdate');
                                 $("#replaceme").html(fdate);
-            </script></b></p>
+            </script></p>
         </div>
         <p style="color: #375781;font-family:Helvetica Neue,Roboto,Arial,Droid Sans,sans-serif; font-size: 14px;font-weight: 400;line-height: 1.471;"><b>Reason of Visit:</b>
         <div style="color: #375781;font-family:Helvetica Neue,Roboto,Arial,Droid Sans,sans-serif; font-size: 14px;font-weight: 400;line-height: 1.471; width:290px; height:40px;overflow:auto;"> @rov</div>
@@ -173,21 +181,26 @@
             <div id="p_files" style="color: #375781;font-family:Helvetica Neue,Roboto,Arial,Droid Sans,sans-serif; font-size: 14px;font-weight: 400;line-height: 1.471; width:290px; height:40px;overflow:auto;">
                <table>
                    <tr>
-                       @if (Model.AppFiles != null || Model.AppFiles.Count > 0)
-                {
-
-                    foreach (var item in Model.AppFiles)
-                    {
+                       @if (Model.AppFiles.Count > 0)
+                                   {
+                                       var j = 1;
+                                       foreach (var item in Model.AppFiles)
+                                       {
                                <td>
                                    <button id="@item.fileID" type="button" class="btn btn-default" style="display:block; font-size:10px;position:relative" onclick="downloadFile(@item.fileID,@Model.PatientVM.patientid)">
-                                       @item.FileName.Trim()
+                                       File+@j;
                                    </button>
                                </td>
+                               j = j + 1;
 
                            }
 
                        }
-                   </tr>
+                       @if (Model.AppFiles.Count == 0)
+                       {
+                        <td>N.A</td>
+                            }
+</tr>
                 </table>
             </div>
             </p>
@@ -217,7 +230,7 @@
                                     <td style="padding: 7px">
 <p style="color: rgb(55, 87, 129); font-family:Helvetica Neue,Roboto,Arial,Droid Sans,sans-serif; font-size: 14px;font-weight: 400;line-height: 1.471;">
                                 <b>Review of Systems:</b><br>
-                                @if (Model.rosItems != null || Model.rosItems.Count > 0)
+                                @if (Model.rosItems.Count > 0)
                                 {
 
                                     foreach (var item in Model.rosItems)
@@ -237,6 +250,10 @@
                                     }
 
                                 }
+    @if (Model.rosItems.Count == 0)
+    {
+        <span>N.A</span>
+    }
                         </p></td>
                     </tr>
 
