--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -163,16 +163,16 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="sidebar-footer hidden-small">
+                    <div class="sidebar-footer hidden-small" style="background: #172D44;">
                         <a data-toggle="tooltip" data-placement="top" title="My Profile">
                             <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
                         </a>
-                        @*<a data-toggle="tooltip" data-placement="top" title="Full Screen" onclick="toggleFullScreen();">
-                            <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
+                        <a data-toggle="tooltip" data-placement="top" title="Full Screen" onclick="toggleFullScreen();">
+                            
                         </a>
                         <a data-toggle="tooltip" data-placement="top" title="Create Help Ticket">
-                            <span class="fa fa-ticket" aria-hidden="true"></span>
-                        </a>*@
+                         
+                        </a>
                         @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
                         {
                             @Html.AntiForgeryToken()
