push notification helper now Tokbox info sent between users

--- a/WebApp/Views/DoctorAppointment/PartialDoctorUpcoming.cshtml
+++ b/WebApp/Views/DoctorAppointment/PartialDoctorUpcoming.cshtml
@@ -138,7 +138,7 @@ else
                         //Log consultion creation sucess
                         var cCallLogUrl = '@Url.Action("ConsultCreatedbyDoctor", "UserChat")?patientId=' + patientID;
                         //$.post(cCallLogUrl);
-
+                        debugger;
                         makeCallToPatient(patientID, appID,_consultID,oPatInfo);
 
                     }
