--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -458,17 +458,17 @@
                 debugger;
                 //
                 localStorage.setItem('tokbox', tokboxInfo);
-                  var cUrlReadyForCall = "@Url.Action("ReadyForCall","UserChat")?senderId=@SessionHandler.UserInfo.Id&userType=Doctor&receiverId=" + patId + "&doctorName=@(SessionHandler.UserInfo.FirstName + " "+ SessionHandler.UserInfo.LastName)&patientName=" + patName;
+                 // var cUrlReadyForCall = "@Url.Action("ReadyForCall","UserChat")?senderId=@SessionHandler.UserInfo.Id&userType=Doctor&receiverId=" + patId + "&doctorName=@(SessionHandler.UserInfo.FirstName + " "+ SessionHandler.UserInfo.LastName)&patientName=" + patName;
 
-                  $.post(cUrlReadyForCall, function (oResp) {
+                //  $.post(cUrlReadyForCall, function (oResp) {
                 if (tokboxInfo != '0')
-                    window.location = '@Url.Action("Index","UserChat")';  //Redirected doctor to call
+                    window.location = '@Url.Action("Index","UserChat")?tokboxInfo=' + tokboxInfo;  //Redirected doctor to call
                 else alert('Err in tokbox connection');
                 //localStorage.setItem('consultationKey', consultId);
 
 
 
-                 });
+               //  });
             }
 
             chat.client.receiveMessage = function (msgFrom, msg, receiverId, senderid) {
@@ -501,7 +501,7 @@
                         var cCallLogUrl = '@Url.Action("DoctorDeclinedCall", "UserChat")?patientId=' + senderid;
                         $.post(cCallLogUrl);
                         //Log Call Declined - Ends
-                        
+
                     }
 
                     //Save SignalR Information to local storage so that it can be used whenever needed.
@@ -527,7 +527,7 @@
 
                     //Create tokbox info, and save in local storage
                     debugger;
-                    if (txt == 'Declined') return; //if doctor decline then stop here 
+                    if (txt == 'Declined') return; //if doctor decline then stop here
                     var cUrlReadyForCall = "@Url.Action("ReadyForCall","UserChat")?senderId=" + signalRInfo.SenderId + "&userType=Doctor&receiverId=" + signalRInfo.ReceiverId + "&recipientName=" + fromJson.name + "&consultID=" + fromJson.name + "&tokbox=" + fromJson.name;
 
                     $.post(cUrlReadyForCall, function (oResp) {
@@ -545,7 +545,7 @@
                                 Message: JSON.stringify({ status: 'tokbox', name: oResp })
                             });
                             //Redirect doctor to call
-                            window.location = '@Url.Action("Index","UserChat")';
+                            window.location = '@Url.Action("Index","UserChat")?tokboxInfo=' + oResp;
                         }
 
                         else {
